crates/nash-test/tests/snapshots/runtime__multiline_assert_display_columns.snap
---
source: crates/nash-test/tests/runtime.rs
expression: "report::terminal::render_assert(source, &report)"
---
× assert (界 == é + z
          │     │   │
          │     │   zero
          │     right
          left
          continued
                && 名 == value)
                   │     │
                   │     first
                   │     second
                   name
