crates/nash-test/tests/snapshots/runtime__report_nested_replay_choices_losslessly.snap
---
source: crates/nash-test/tests/runtime.rs
---
[
  {
    "group": [
      {
        "choice": "18446744073709551615"
      },
      {
        "group": []
      }
    ]
  }
]
